kubernetes/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ngen-api
spec:
  selector:
    matchLabels:
      app: ngen-api
  replicas: 1
  strategy:
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 2
  template:
    metadata:
      labels:
        app: ngen-api
    spec:
      containers:
        - name: ngen-api
          image: bwvolleyball/ngenius-api
          imagePullPolicy: Always
          ports:
            - name: listen-port
              containerPort: 8080
          resources:
            requests:
              cpu: 5m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 20
            periodSeconds: 10
