kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ngen-api-service
spec:
  type: ClusterIP
  ports:
    - name: tcp
      port: 8080
  selector:
    app: ngen-api
