kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: api
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: ngen-api-service
              servicePort: 8080
